// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MLocationBody <MLocationBody> with error displays correct fallback content when map_style_url is misconfigured 1`] = `
<div
  class="mx_EventTile_body mx_MLocationBody"
>
  <span
    class="mx_EventTile_tileError"
  >
    Unable to load map: This homeserver is not configured correctly to display maps, or the configured map server may be unreachable.
  </span>
  <br />
  Shared a location: Found at geo:51.5076,-0.1276 at 2021-12-21T12:22+0000
</div>
`;

exports[`MLocationBody <MLocationBody> with error displays correct fallback content without error style when map_style_url is not configured 1`] = `
<div
  class="mx_EventTile_body mx_MLocationBody"
>
  <span
    class=""
  >
    Unable to load map: This homeserver is not configured to display maps.
  </span>
  <br />
  Shared a location: Found at geo:51.5076,-0.1276 at 2021-12-21T12:22+0000
</div>
`;

exports[`MLocationBody <MLocationBody> without error renders map correctly 1`] = `
<DocumentFragment>
  <div
    class="mx_MLocationBody"
  >
    <div
      aria-describedby="mx_TooltipTarget_9K38QgU2"
      tabindex="0"
    >
      <div
        class="mx_Map mx_MLocationBody_map"
        id="mx_Map_mx_MLocationBody_$2_vY7Q4uEh"
      >
        <span>
          <div
            class="mx_Marker mx_Marker_defaultColor"
            id="mx_MLocationBody_$2_vY7Q4uEh-marker"
          >
            <div
              class="mx_Marker_border"
            >
              <div
                class="mx_Marker_icon"
              />
            </div>
          </div>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MLocationBody <MLocationBody> without error renders marker correctly for a self share 1`] = `
<DocumentFragment>
  <div
    class="mx_MLocationBody"
  >
    <div
      aria-describedby="mx_TooltipTarget_9K38QgU2"
      tabindex="0"
    >
      <div
        class="mx_Map mx_MLocationBody_map"
        id="mx_Map_mx_MLocationBody_$3_vY7Q4uEh"
      >
        <span>
          <div
            class="mx_Marker mx_Marker_defaultColor"
            id="mx_MLocationBody_$3_vY7Q4uEh-marker"
          >
            <div
              class="mx_Marker_border"
            >
              <span
                class="_avatar_mcap2_17 mx_BaseAvatar _avatar-imageless_mcap2_61"
                data-color="3"
                data-testid="avatar-img"
                data-type="round"
                role="presentation"
                style="--cpd-avatar-size: 36px;"
                title="@user:server"
              >
                u
              </span>
            </div>
          </div>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
